2012-04-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/javascript/jquery.pandora.js: Fixed modal windows in IE.
	
	Fixes: #3521410

2012-04-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_db.php, operation/agentes/exportdata.php:
	cleaned source code style.
	
	* include/functions_api.php: fixed prevent the empty string in the
	status into the search events.

2012-04-26  Vanessa Gil  <vanessa.gil@artica.es>

	* include/javascript/pandora.js: Fixed bug in massive alerts deletion.

2012-04-26  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/reports/reporting_builder.list_items.php: Added sort column.

2012-04-26  Junichi Satoh  <junichi@rworks.jp>

	* general/pandora_help.php: Merged from trunk. Added meta tag to
	avoid mistake of character code recognition with multibyte characters
	and Google chrome browser.

2012-04-25  Sancho Lerena <slerena@artica.es>

	* general/error_emptyconfig.php,
	general/error_authconfig.php,
	general/error_dbconfig.php: minimal changes on text to fit the error
	window message.

	* godmode/modules/manage_network_templates_form.php: Fixed description.
	
	* godmode/modules/manage_network_components.php: minimal layout changes.

	* pandoradb_data.sql: New "default" values for network components, tags,
	network (group) templates, ant agent custom fields.

	* operation/agentes/estado_monitores.php: More size for the description 
	in the agent main view.

2012-04-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* extensions/update_manager.php: Changed license modal window style 
	 to Chrome box model.

2012-04-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
	
	* include/styles/dialog.css
	 index.php: Added support for new login help modal window.
	 
	* general/login_help_dialog.php: New login help modal window.
	
	* include/functions_visual_map.php: Fixed some warnings 
	with bubble percentile items in visual console edition mode.

2012-04-25 Miguel de Dios <miguel.dedios@artica.es>
	