@@ -1,3 +1,7 @@
+2012-04-26  Vanessa Gil  <vanessa.gil@artica.es>
+
+	* include/functions_filemanager.php: Changed all messages.
+
 2012-04-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* include/javascript/jquery.pandora.js: Fixed modal windows in IE.
